--- a/contacts.html
+++ b/contacts.html
@@ -244,8 +244,8 @@
             </p>
 
             <p><strong>Email:</strong> 
-                <a href="mailto:info@buildblock.co.za" style="color:#f4b400; text-decoration:none;">
-                    info@buildblock.co.za
+                <a href="mailto:buildblock38@gmail.com" style="color:#f4b400; text-decoration:none;">
+                    buildblock38@gmail.com
                 </a>
             </p>
 
@@ -295,7 +295,7 @@
                 <a href="tel:+27681586102" style="color:#f4b400; text-decoration:none;">
                     068 158 6102
                 </a> &nbsp; | &nbsp;
-            <strong>Email:</strong> info@buildblock.co.za
+            <strong>Email:</strong> buildblock38@gmail.com
         </p>
 
         <p style="margin-top: 15px; font-size: 14px; color: #cccccc;">
@@ -306,3 +306,4 @@
 
 </body>
 </html>
+
