--- a/Review.html
+++ b/Review.html
@@ -264,6 +264,7 @@
         <a href="potforlio.html">Portfolio</a>
         <a href="projects.html">Projects</a>
         <a href="#about">About Us</a>
+        <a href="Review.html">Reviews</a>
         <a href="contacts.html">Contact</a>
     </div>
 </nav>
@@ -504,3 +505,4 @@
   </script>
 </body>
 </html>
+
