--- a/projects.html
+++ b/projects.html
@@ -277,6 +277,7 @@
             <a href="potforlio.html">Portfolio</a>
             <a href="projects.html">Projects</a>
             <!-- <a href="about.html">About Us</a> -->
+            <a href="Review.html">Reviews</a>
             <a href="contacts.html">Contact</a>
         </nav>
 
@@ -433,3 +434,4 @@
 
 </body>
 </html>
+
