--- a/potforlio.html
+++ b/potforlio.html
@@ -228,7 +228,7 @@
         <ul id="menu">
             <li><a href="index.html">Home</a></li>
             <li><a href="potforlio.html">Portfolio</a></li>
-            <li><a href="services.html">Services</a></li>
+            <!-- <li><a href="services.html">Services</a></li> -->
             <li></li><a href="Review.html">Reviews</a></li>
             <li><a href="contacts.html">Contact</a></li>
         </ul>
@@ -386,4 +386,5 @@
 
 </body>
 </html>
+
 
